--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Comparação de Listas</title>
+    <script type="text/javascript" src="/comparelists.js"></script>
   </head>
   <body>
     <form>
